<resources>
    <string name="app_name">Image</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="choice">선택을 시작하시겠습니까?</string>
    <string name="start">start</string>
    <string name="android">좋아하는 안드로이드 버전은?</string>
    <string name="jelly">젤리빈(4.3)</string>
    <string name="kitkat">킷캣(4.4)</string>
    <string name="lolly">롤리팝(5.0)</string>
    <string name="exit">종료</string>
    <string name="init">처음으로</string>

</resources>
