<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/choice"
        android:textSize="15dp"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Switch
        android:text="@string/start"
        android:id="@+id/swt"
        android:checked="false"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/android"
        android:text="@string/android"
        android:textSize="15dp"
        android:textColor="#000000"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <RadioGroup
        android:id="@+id/radioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb1"
            android:text="@string/jelly"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <RadioButton
            android:id="@+id/rb2"
            android:text="@string/kitkat"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb3"
            android:text="@string/lolly"
            android:layout_margin="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:id="@+id/img"
            />
    </RadioGroup>




    <Button
        android:id="@+id/exit"
        android:text="@string/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/init"
        android:text="@string/init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
